--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
-    <script type="module" src="node_modules/@shoelace-style/shoelace/dist/components/icon/icon.js"></script>
     <script
     type="module"
     id="dev-console-gateway"
     src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"
   ></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-    <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"></script> -->
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"></script>
     <style>
         * {
             font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -132,7 +131,6 @@
             <span slot="title">Title</span>
         </sgds-sidenav-item>
     </sgds-sidenav>
-    
     <main>
         <div class="container">
             <h2>Button</h2>
@@ -142,6 +140,18 @@
                     <sgds-button size="sm" variant="primary">Hello World</sgds-button>
                     <sgds-button variant="primary" active>Hello World</sgds-button>
                     <sgds-button size="lg" variant="primary">Hello World</sgds-button>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <h2>Card</h2>
+            <p>Action Card</p>
+            <div class="row">
+                <div class="col-4">
+                    <sgds-action-card iconName="box"><span slot="card-subtitle">Laptop</span><span slot="card-title">Apple</span><span slot="card-text">Macbook Pro M1</span></sgds-action-card>
+                </div>
+                <div class="col-4">
+                    <sgds-action-card><span slot="card-subtitle">Laptop</span><span slot="card-title">Apple</span><span slot="card-text">Macbook Pro M1</span></sgds-action-card>
                 </div>
             </div>
         </div>
@@ -170,7 +180,7 @@
             <div class="row">
                 <div class="col-6 mb-2">
                     <form>
-                        <sgds-input name="input1" id="input1" pattern="test" required></sgds-input>
+                        <sgds-input name="input1" id="input1" pattern="test" required iconName="box"></sgds-input>
                         <sgds-checkbox name="cb1" id="cb1" value="lolol">no required<span slot="feedback">You are required to check this.</span></sgds-checkbox>
                         <sgds-checkbox name="cb2" id="cb2" value="lolol1" required>with required<span slot="feedback">You are required to check this.</span></sgds-checkbox>
                         <sgds-checkbox name="cb2" id="cb2" value="lolol1" required disabled>disabled<span slot="feedback">You are required to check this.</span></sgds-checkbox>
