--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <sgds-action-card id="hoho" iconName="box" bgColor="primary"><span slot="card-subtitle">Laptop</span><span slot="card-title">Apple</span><span slot="card-text">Macbook Pro M1</span></sgds-action-card>
                 </div>
                 <div class="col-4">
-                    <sgds-action-card><span slot="card-subtitle">Laptop</span><span slot="card-title">Apple</span><span slot="card-text">Macbook Pro M1</span></sgds-action-card>
+                    <sgds-action-card type="radio"><span slot="card-subtitle">Laptop</span><span slot="card-title">Apple</span><span slot="card-text">Macbook Pro M1</span></sgds-action-card>
                 </div>
                 <div class="col-4">
                     <sgds-action-card disabled><span slot="card-subtitle">Laptop</span><span slot="card-title">Apple</span><span slot="card-text">Macbook Pro M1</span></sgds-action-card>
@@ -368,59 +368,6 @@
       ]'>
     </sgds-footer>
     </div>
-    <script>
-        const submitButton = document.querySelector('sgds-quantitytoggle#heyhey');
-        console.log(submitButton)
-        // submitButton.addEventListener('sgds-change', (e) => {
-        //     e.preventDefault();
-        //     console.log(e)
-        // });
-
-        // const input = document.querySelector('sgds-checkbox#hehe');
-        // input.addEventListener('sgds-change', (e) => {
-        //     e.preventDefault();
-        //     console.log(e);
-        // }); 
-
-        // } ;
-
-
-        // grab reference to form
-
-        const formElem = document.querySelector('form');
-
-        // submit handler
-
-        formElem.addEventListener('submit', (e) => {
-            // on form submission, prevent default
-            e.preventDefault();
-
-            //   console.log(formElem.shadowRoot?.querySelector('input[name="input1"]'));
-            //   console.log(formElem.shadowRoot?.querySelector('input[name="cb1"]')); 
-            //   console.log(formElem.shadowRoot?.querySelector('input[name="cb2"]')); 
-
-            // construct a FormData object, which fires the formdata event
-            const formData = new FormData(formElem);
-            // formdata gets modified by the formdata event
-            console.log(formData.get('input1'));
-            console.log(formData.get('cb1'));
-            console.log(formData.get('cb2'));
-        });
-
-// formdata handler to retrieve data
-
-// formElem.addEventListener('formdata', (e) => {
-//   console.log('formdata fired');
-
-//   // modifies the form data
-//   const formData = e.formData;
-//   // formdata gets modified by the formdata event
-//   formData.set('cb1', formData.get('cb1').toUpperCase());
-//   formData.set('cb2', formData.get('cb2').toUpperCase());
-// });
-
-
-    </script>
 </body>
 
 </html>
